--- a/end.html
+++ b/end.html
@@ -11,7 +11,7 @@
 <body>
         <div class="card">
             <div class="card-header">
-                <h1 id="score-text">Your Score - 0/3</h1>
+                <h1 id="score-text" style="text-align: center;">Your Score - 0/3</h1>
             </div>
             <div class="card-footer">
                 <div class="input-group mb-3">
